# designpattern

./: AbstractFactory.h  AbstractFactory_Test.cpp  Adapter.h  Adapter_Test.cpp  Bridge.h  Bridge_Test.cpp  Builder.h  Builder_Test.cpp  CMakeLists.txt  Command.h  Command_Test.cpp  Decorator.h  Decorator_Test.cpp  Facade.h  Facade_Test.cpp  FactoryMethod.h  FactoryMethod_Test.cpp  FlyWeight.h  FlyWeight_Test.cpp  Mediator.cpp  Mediator.h  Mediator_Test.cpp  Observer.h  Observer_Test.cpp  Proxy.h  Proxy_Test.cpp  SimpleFactory.h  SimpleFactory_Test.cpp  Singleton.h  Singleton_Test.cpp  State.h  State_Test.cpp  Strategy.h  Strategy_Test.cpp  Untitled Diagram.xml  exchange_useragent.xml
